font-size and image width alignment fixes with units change

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,13 +67,13 @@ body {
 }
 
 .logo-img {
-    max-width: 400px;
+    /* max-width: 400px; */
     width: 100%;
     height: 14vh;
 }
 
 .tagline {
-    font-size: 1.35rem;
+    font-size: 2.5vh;
     letter-spacing: 0.2em;
     font-weight: 300;
     margin-top: 8rem;
@@ -96,7 +96,7 @@ body {
 .coming-soon {
     text-transform: uppercase;
     letter-spacing: 0.3em;
-    font-size: 1.6rem;
+    font-size: 3vh;
     text-align: center;
     margin-bottom: 1rem;
     font-weight: 300;
